rspec-tools/tests/resources/invalid-asciidoc/unprotected_formatting.adoc
we should be `*careful`

of `unpro**tected`

formatting `~flags~`

They can create `_problems_`.